--- a/example-secret.yaml
+++ b/example-secret.yaml
@@ -3,7 +3,8 @@ apiVersion: v1
 metadata:
   name: example-secret
   annotations:
-    avp_path: "avp/test"
+    avp_path: "avp/data/test"
 type: Opaque
-data:
-  sample-secret: <sample>
+secretData:
+  credentials.json:
+    <sample>
